--- a/CSC311-S24-STUDENT/.classpath
+++ b/CSC311-S24-STUDENT/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="Assignment1"/>
 	<classpathentry kind="src" path="Assignment2"/>
+	<classpathentry kind="src" path="Classwork"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
